--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,7 @@
 
 .header__container {
     margin-bottom: 20px;
+    margin-top: 25px;
 
     display: grid;
     grid-template-columns: 1fr 2fr 3fr;
